fix form error width on mobile

--- a/css/form-lead.css
+++ b/css/form-lead.css
@@ -234,6 +234,10 @@
   .form-lead_viewtype_wide form .submit {
     flex-basis: 164px;
   }
+
+  .form-lead_viewtype_wide form .field_with_errors {
+    flex-basis: 202px;
+  }
 }
 
 @media (max-width: 500px) {
